<resources>
    <string name="app_name">Win22</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_added_bet">You have not added any sports bets</string>
    <string name="name_of_bet">Name of bet</string>
    <string name="odd_ex_2_75">Odd (ex:2.75)</string>
    <string name="amount">Amount</string>
    <string name="toast_empty">Fill in all the fields</string>
    <string name="clear_the_bank">Clear the data</string>
    <string name="balance">Balance:</string>
    <string name="current_balance">Current balance:</string>
    <string name="number_of_bets">Number of bets:</string>
</resources>