<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentStat">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.github.mikephil.charting.charts.LineChart>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chartView">

        <TextView
            android:id="@+id/textView_balanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/balance"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <TextView
            android:id="@+id/textView_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="1000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_balanceText"
            app:layout_constraintStart_toEndOf="@+id/textView_balanceText"
            app:layout_constraintTop_toTopOf="@+id/textView_balanceText"></TextView>

        <TextView
            android:id="@+id/textView_current_balanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/current_balance"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView_balanceText"
            app:layout_constraintTop_toBottomOf="@+id/textView_balanceText" />

        <TextView
            android:id="@+id/textView_current_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="1180"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_current_balanceText"
            app:layout_constraintStart_toEndOf="@+id/textView_current_balanceText"
            app:layout_constraintTop_toTopOf="@+id/textView_current_balanceText" />

        <TextView
            android:id="@+id/textView_count_betText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/number_of_bets"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView_current_balanceText"
            app:layout_constraintTop_toBottomOf="@+id/textView_current_balanceText" />

        <TextView
            android:id="@+id/textView_number_bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="3"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_count_betText"
            app:layout_constraintStart_toEndOf="@+id/textView_count_betText"
            app:layout_constraintTop_toTopOf="@+id/textView_count_betText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>